--- a/mq.style.css
+++ b/mq.style.css
@@ -398,7 +398,7 @@ min-width: de cima até aquele valor*/
 }
 
 
-@media screen and (min-width: 926px) and (max-width: 1200px) {
+@media screen and (min-width: 926px) and (max-width: 1100px) {
     div.principal {
         display: flex;
     }
@@ -611,6 +611,469 @@ min-width: de cima até aquele valor*/
         text-align: left;
         padding-left: 5px;
         width: 300px;
+    }
+
+    #img img {
+        width: 38px;
+        padding: 0px;
+        margin-left: 10px;
+    } 
+
+    .imgs {
+        text-align: left;
+        padding-top: 35px;
+        padding-right: 10px;
+    }
+}
+
+
+@media screen and (min-width: 1100px) and (max-width: 1200px) {
+    div.principal {
+        display: flex;
+    }
+
+    div.principal p {
+        text-align: justify;
+    }
+
+    #div1 {
+        display: flex;
+        position: absolute;
+        left: 128px;
+        top: 125px;
+    }
+
+
+    header #div1 img {
+        width: 32px;
+        padding-top: 20px;
+        padding-left: 20px;
+        margin-right: 5px;
+    }
+
+    header img#imgprincipal {
+        width: 290px;
+        height: 480px;
+        z-index: -1;
+        margin: auto;
+        display: block;
+        position: absolute;
+        border-radius: 20px; 
+        top: 130px;
+        left: 120px;
+    }
+
+
+    header #div3 h1 {
+        font-size: 3.2em;
+        color: rgba(255, 255, 255, 0.916);
+        font-family: 'Barlow', sans-serif; 
+        text-align: center;
+        padding-left: 85px;
+    }
+
+    header .principal h1.h1 {
+        padding-top: 30px;
+        padding-left: 120px;
+        padding-bottom: 88px;
+        font-size: 2.8rem;
+    }
+
+    #div3 {
+        padding-top: 120px;
+        padding-left: 80px;
+        text-align: center;
+    }
+
+    
+    h2 {
+        font-size: 3.2em;
+        color: rgba(255, 255, 255, 0.916);
+        font-family: 'Barlow', sans-serif;  
+        text-align: center;
+        padding-left: 135px;
+    }
+    
+    header p {
+        font-size: 1.2em;
+        text-align: right;
+        color: rgb(255, 255, 255);
+        font-family: 'Barlow', sans-serif;
+        padding-top: 20px;
+        padding-left: 137px;
+        width: 375px;
+    }
+    
+    h3 {
+        font-size: 1.3em;
+        font-family: 'Barlow', sans-serif;
+        color: rgba(255, 255, 255, 0.916);
+        padding-top: 30px;
+        padding-right: 158px;
+    }
+
+    hr {
+        width: 900px;
+        margin: auto;
+        display: block;
+        margin-top: 170px;
+    }
+
+    div#skills{
+        display: grid;
+        margin-top: 40px;
+        grid-template-columns: 220px 200px 170px;
+        grid-auto-rows: 200px 180px;
+        justify-content: space-evenly;
+    }
+
+    div#skills h1 {
+        font-size: 2.1em;
+         color: rgba(255, 255, 255, 0.855);
+    }
+
+    div#skills p {
+        font-size: 1.2em;
+        font-family: 'Barlow', sans-serif;
+        color: rgba(185, 184, 184, 0.942);
+    }
+
+    div#tabela2 {
+        display: grid;
+        justify-content: space-evenly;
+        grid-template-columns: 680px 160px;
+        grid-auto-rows: 180px 180px;
+    }
+
+    div#tabela2 h1 {
+        font-size: 3.8rem;
+        color: rgba(255, 255, 255, 0.916);
+    }
+
+
+    b.b3 {
+        color: rgba(255, 255, 255, 0.916);
+        font-size: 1.4rem;    
+    }
+
+    #b {
+        padding-top: 55px;
+    }
+
+    aside div#imagens h1 {
+        color: rgba(255, 255, 255, 0.93);
+        font-size: 1.4em;
+        padding: 10px;
+    }
+        
+
+    aside div#imagens p {
+        color: rgba(255, 255, 255, 0.797);
+        font-size: 1.1em;
+        padding: 5px;
+        padding-bottom: 80px;
+        text-align: center;
+    }
+
+    p.linha5, p.linha6 , p.linha7, p.linha8 {
+        padding-bottom: 20px;
+    }
+    
+    img#linha1, img#linha2, img#linha3, img#linha4 {
+        height: 240px;
+        width: 340px;
+        border-radius: 10px;
+        border: 2px solid lightgreen;
+        margin: auto;
+        display: block;
+    }
+
+    .linha1, .linha2 {
+        text-align: center;
+        margin: auto;
+        display: block;    
+}
+
+    #imagens {
+        display: flex;
+        text-align: center;
+        margin: auto;
+    }
+
+    #img {
+        text-align: center;
+        margin: auto;
+        display: block;
+    }
+
+    div#geral {
+        text-align: left;
+    }
+
+    footer {
+        background-color: rgb(48, 47, 47);
+        padding: 40px;
+    }
+
+    .footer .imgextra {
+        border-radius: 20px;
+        width: 240px;
+        height: 300px;
+        margin-left: 20px;
+        padding-top: 10px;
+        padding-right: 40px;
+    }
+
+
+    footer h1 {
+        color: rgba(247, 247, 247, 0.966);
+        font-size: 3.8em;
+        font-family: 'Barlow', sans-serif;
+        margin: 0px;
+        text-align: left;
+        padding-bottom: 15px;
+    }
+    
+    footer #geral p {
+        color: rgba(255, 255, 255, 0.907);
+        font-size:  1.5rem;
+        font-family: 'Barlow', sans-serif;
+        text-align: left;
+        padding-left: 5px;
+        width: 300px;
+    }
+
+    #img img {
+        width: 38px;
+        padding: 0px;
+        margin-left: 10px;
+    } 
+
+    .imgs {
+        text-align: left;
+        padding-top: 35px;
+        padding-right: 10px;
+    }
+}
+
+
+@media screen and (min-width: 1200px) {
+    div.principal {
+        display: flex;
+    }
+
+    div.principal p {
+        text-align: justify;
+    }
+
+    #div1 {
+        display: flex;
+        position: absolute;
+        left: 227px;
+        top: 125px;
+    }
+
+
+    header #div1 img {
+        width: 35px;
+        padding-top: 20px;
+        padding-left: 20px;
+        margin-right: 5px;
+    }
+
+    header img#imgprincipal {
+        width: 350px;
+        height: 550px;
+        z-index: -1;
+        margin: auto;
+        display: block;
+        position: absolute;
+        border-radius: 20px; 
+        border: 3px solid lightgreen;
+        top: 130px;
+        left: 220px;
+    }
+
+
+    header #div3 h1 {
+        font-size: 4.2em;
+        color: rgba(255, 255, 255, 0.916);
+        font-family: 'Barlow', sans-serif; 
+        text-align: center;
+        padding-left: 75px;
+        padding-right: 20px;
+    }
+
+    header .principal h1.h1 {
+        padding-top: 30px;
+        padding-left: 230px;
+        padding-bottom: 88px;
+        font-size: 3.0rem;
+    }
+
+    #div3 {
+        padding-top: 120px;
+        padding-left: 170px;
+        text-align: center;
+    }
+
+    
+    h2 {
+        font-size: 3.85em;
+        color: rgba(255, 255, 255, 0.916);
+        font-family: 'Barlow', sans-serif;  
+        text-align: center;
+        padding-bottom: 20px;
+        padding-left: 75px;
+    }
+    
+    header p {
+        font-size: 1.4em;
+        text-align: left;
+        color: rgb(255, 255, 255);
+        font-family: 'Barlow', sans-serif;
+        padding-top: 20px;
+        padding-bottom: 15px;
+        width: 465px;
+    }
+    
+    h3 {
+        font-size: 1.6em;
+        font-family: 'Barlow', sans-serif;
+        color: rgba(255, 255, 255, 0.916);
+        padding-top: 30px;
+        padding-right: 275px;
+    }
+
+    hr {
+        width: 1170px;
+        margin: auto;
+        display: block;
+        margin-top: 175px;
+    }
+
+    div#skills{
+        display: grid;
+        margin-top: 40px;
+        grid-template-columns: 220px 200px 170px;
+        grid-auto-rows: 200px 180px;
+        justify-content: space-evenly;
+    }
+
+    div#skills h1 {
+        font-size: 2.1em;
+         color: rgba(255, 255, 255, 0.855);
+    }
+
+    div#skills p {
+        font-size: 1.2em;
+        font-family: 'Barlow', sans-serif;
+        color: rgba(185, 184, 184, 0.942);
+    }
+
+    div#tabela2 {
+        display: grid;
+        justify-content: space-evenly;
+        grid-template-columns: 1000px 160px;
+        grid-auto-rows: 180px 180px;
+    }
+
+    div#tabela2 h1 {
+        font-size: 3.9rem;
+        color: rgba(255, 255, 255, 0.916);
+    }
+
+
+    b.b3 {
+        color: rgba(255, 255, 255, 0.916);
+        font-size: 1.4rem;    
+    }
+
+    #b {
+        padding-top: 55px;
+    }
+
+    aside div#imagens h1 {
+        color: rgba(255, 255, 255, 0.93);
+        font-size: 1.5em;
+        padding: 10px;
+    }
+        
+
+    aside div#imagens p {
+        color: rgba(255, 255, 255, 0.797);
+        font-size: 1.1em;
+        padding: 5px;
+        padding-bottom: 80px;
+        text-align: center;
+    }
+
+    p.linha5, p.linha6 , p.linha7, p.linha8 {
+        padding-bottom: 20px;
+    }
+    
+    img#linha1, img#linha2, img#linha3, img#linha4 {
+        height: 270px;
+        width: 500px;
+        border-radius: 10px;
+        border: 2px solid lightgreen;
+        margin: auto;
+        display: block;
+    }
+
+    .linha1, .linha2 {
+        text-align: center;
+        margin: auto;
+        display: block;    
+}
+
+    #imagens {
+        display: flex;
+        text-align: center;
+        margin: auto;
+    }
+
+    #img {
+        text-align: center;
+        margin: auto;
+        display: block;
+    }
+
+    div#geral {
+        text-align: left;
+    }
+
+    footer {
+        background-color: rgb(48, 47, 47);
+        padding: 40px;
+    }
+
+    .footer .imgextra {
+        border-radius: 20px;
+        width: 250px;
+        height: 310px;
+        margin-left: 20px;
+        padding-top: 10px;
+        padding-right: 200px;
+    }
+
+
+    footer h1 {
+        color: rgba(247, 247, 247, 0.966);
+        font-size: 3.8em;
+        font-family: 'Barlow', sans-serif;
+        margin: 0px;
+        text-align: left;
+        padding-bottom: 30px;
+    }
+    
+    footer #geral p {
+        color: rgba(255, 255, 255, 0.907);
+        font-size:  1.5rem;
+        font-family: 'Barlow', sans-serif;
+        text-align: left;
+        padding-left: 5px;
+        width: 600px;
     }
 
     #img img {
