--- a/mq.style.css
+++ b/mq.style.css
@@ -11,7 +11,7 @@ min-width: de cima até aquele valor*/
         text-align: center;
         margin: auto;
         display: block;
-        
+        width: 360px;
     }
 
     .principal {
@@ -40,7 +40,7 @@ min-width: de cima até aquele valor*/
         display: block;
         border: 2px solid lightgreen;
         border-radius: 50%;
-        margin-top: 40px;
+        margin-top: 0px;
         margin-bottom: 10px;
     }  
 
@@ -51,7 +51,7 @@ min-width: de cima até aquele valor*/
 
     header #div1 img {
         text-align: center;
-        width: 21px;
+        width: 23px;
         margin-top: 15px;
         padding: 5px;
         margin-right: 5px;
@@ -64,37 +64,31 @@ min-width: de cima até aquele valor*/
         margin-top: 120px;
     }
 
-    header #div3 p {
-        font-size: 1.0em;
+    header p {
+        font-size: 1.1em;
         text-align: justify;
         color: rgba(255, 255, 255, 0.966);
         font-family: 'Barlow', sans-serif;
         padding-top: 30px;
-        width: 230px;
+        width: 220px;
     }
 
     h2 {
-        font-size: 1.7em;
+        font-size: 2.0em;
         color: rgba(255, 255, 255, 0.916);
         font-family: 'Barlow', sans-serif;  
         text-align: center;
         padding-top: 0px;
-        padding-left: 20px;
+        padding-left: 25px;
     }
 
     header #div3 h1 {
-        font-size: 1.7em;
+        font-size: 2.0em;
         color: rgba(255, 255, 255, 0.916);
         font-family: 'Barlw', sans-serif; 
         text-align: center;
         padding-top: 15px;
-        padding-left: 10px;
-    }
-
-    .paragrafo {
-        text-align: center;
-        margin: auto;
-        display: block;
+        padding-left: 15px;
     }
 
     h3 {
@@ -125,7 +119,6 @@ min-width: de cima até aquele valor*/
         font-family: 'Barlow', sans-serif;
         color: rgba(185, 184, 184, 0.942);
     }
-
 }
 
 
@@ -146,18 +139,18 @@ min-width: de cima até aquele valor*/
     header .principal h1.h1 {
         padding-top: 40px;
         padding-bottom: 5px;
-        font-size: 3.0rem;
+        font-size: 2.4rem;
     }
 
     header picture img#ftextra {
-        width: 210px;
-        height: 210px;
+        width: 190px;
+        height: 190px;
         z-index: -1;
         margin: auto;
         display: block;
         border: 2px solid lightgreen;
         border-radius: 10px;
-        margin-top: 20px;
+        margin-top: 10px;
     } 
     
     header picture img#imgprincipal {
@@ -187,7 +180,7 @@ min-width: de cima até aquele valor*/
     }
 
     h2 {
-        font-size: 2.5em;
+        font-size: 1.8em;
         color: rgba(255, 255, 255, 0.916);
         font-family: 'Barlow', sans-serif;  
         text-align: center;
@@ -195,8 +188,8 @@ min-width: de cima até aquele valor*/
         padding-top: 0px;
     }
 
-    header #div3 h1 {
-        font-size: 2.5em;
+    header h1 {
+        font-size: 3.5em;
         color: rgba(255, 255, 255, 0.916);
         font-family: 'Barlw', sans-serif; 
         text-align: center;
@@ -213,24 +206,6 @@ min-width: de cima até aquele valor*/
         padding-top: 40px;
     }
 
-    div#skills{
-        display: grid;
-        margin-top: 40px;
-        grid-template-columns: 150px 120px;
-        grid-auto-rows: 100px 100px;
-        justify-content: space-evenly;
-    }
-
-    div#skills h1 {
-         font-size: 1.4em;
-         color: rgba(255, 255, 255, 0.855);
-    }
-
-    div#skills p {
-        font-size: 0.7em;
-        font-family: 'Barlow', sans-serif;
-        color: rgba(185, 184, 184, 0.942);
-    }
     
 
 }   
